<resources>
    <string name="app_name">AndroidAssignments</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="Login">Login</string>
    <string name="Login_hint">login name</string>
    <string name="password">password</string>
    <string name="radiobutton">RadioButton</string>
    <string name="first_switch">What does this do?</string>
    <string name="Checkbox">CheckBox</string>
    <string name="login_button">Login</string>
    <string name="dialog_message">Are you sure you want to finish the activity?</string>
    <string name="dialog_title">Confirmation</string>
    <string name="ok">Yes</string>
    <string name="cancel">No</string>
    <string name="chat_button">Start Chat</string>
    <string name="Send">Send</string>
    <string name="typemessage">Type a message</string>
    <string name="newtext">New Text</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="dialogue_back">Do you want to go back?</string>
    <string name="new_message">Enter your new message</string>
    <string name="Choice_1">Choice 1</string>
    <string name="Choice_2">Choice 2</string>
    <string name="Choice_3">Choice 3</string>
    <string name="About">About</string>
    <string name="TestToolbar"> Test Toolbar</string>
    <string name="WeatherForecast">Weather Forecast</string>
    <string-array name="canadian_cities">
        <!-- Alberta -->
        <item>Calgary</item>
        <item>Edmonton</item>
        <item>Red Deer</item>
        <item>Lethbridge</item>
        <item>St. Albert</item>
        <item>Medicine Hat</item>
        <item>Grande Prairie</item>
        <item>Airdrie</item>

        <!-- British Columbia -->
        <item>Vancouver</item>
        <item>Victoria</item>
        <item>Surrey</item>
        <item>Burnaby</item>
        <item>Richmond</item>
        <item>Kelowna</item>
        <item>Kamloops</item>
        <item>Nanaimo</item>

        <!-- Manitoba -->
        <item>Winnipeg</item>
        <item>Brandon</item>
        <item>Steinbach</item>
        <item>Thompson</item>
        <item>Portage la Prairie</item>

        <!-- New Brunswick -->
        <item>Fredericton</item>
        <item>Moncton</item>
        <item>Saint John</item>
        <item>Miramichi</item>
        <item>Bathurst</item>

        <!-- Newfoundland and Labrador -->
        <item>St. Johns</item>
        <item>Mount Pearl</item>
        <item>Corner Brook</item>
        <item>Conception Bay South</item>

        <!-- Northwest Territories -->
        <item>Yellowknife</item>
        <item>Inuvik</item>
        <item>Hay River</item>

        <!-- Nova Scotia -->
        <item>Halifax</item>
        <item>Sydney</item>
        <item>Truro</item>
        <item>New Glasgow</item>

        <!-- Nunavut -->
        <item>Iqaluit</item>
        <item>Rankin Inlet</item>
        <item>Arviat</item>

        <!-- Ontario -->
        <item>Toronto</item>
        <item>Ottawa</item>
        <item>Mississauga</item>
        <item>Brampton</item>
        <item>Hamilton</item>
        <item>London</item>
        <item>Markham</item>
        <item>Vaughan</item>
        <item>Kitchener</item>
        <item>Windsor</item>
        <item>Richmond Hill</item>
        <item>Barrie</item>
        <item>Sudbury</item>
        <item>Thunder Bay</item>

        <!-- Prince Edward Island -->
        <item>Charlottetown</item>
        <item>Summerside</item>

        <!-- Quebec -->
        <item>Montreal</item>
        <item>Quebec City</item>
        <item>Laval</item>
        <item>Gatineau</item>
        <item>Longueuil</item>
        <item>Sherbrooke</item>
        <item>Trois-Rivières</item>
        <item>Saint-Jean-sur-Richelieu</item>

        <!-- Saskatchewan -->
        <item>Regina</item>
        <item>Saskatoon</item>
        <item>Prince Albert</item>
        <item>Moose Jaw</item>
        <item>Yorkton</item>

        <!-- Yukon -->
        <item>Whitehorse</item>
        <item>Dawson City</item>
    </string-array>
</resources>