<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:columnCount="2"
    android:rowCount="2"
    android:layout_gravity="fill">


    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radiobutton"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        />

    <CheckBox
        android:id="@+id/my_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Checkbox"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"/>

    <Switch
        android:id="@+id/my_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_switch"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"/>

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        app:srcCompat="@android:drawable/ic_menu_camera" />


</GridLayout>